# nite

./: .clang-format  CMakeLists.txt  README.md
examples/: grid.cpp  hello.cpp  image.cpp  input.cpp
include/: nite.hpp
res/: musashi1.pgm  musashi2.pgm  musashi3.pgm  musashi4.pgm  musashi5.pgm  musashi6.pgm  musashi7.pgm  musashi8.pgm
src/: ansi_keys.txt  main.cpp  nite.cpp  nite.hpp
